# assorted-exercises-10th-class-welovecode

./: README.md
exercise1/: CMakeLists.txt  README.md  exercise1.cpp  exercise1.hpp
exercise1/test/: test_copy_if_divisible_by.cpp  test_count_odd.cpp  test_even_sum.cpp  test_is_even.cpp  test_is_sorted.cpp  test_largest_div_by_three.cpp
exercise2/: CMakeLists.txt  README.md  exercise2.cpp  exercise2.hpp
exercise2/test/: test_decode.cpp  test_encode.cpp  test_rot13.cpp  test_shift_char.cpp
exercise3/: CMakeLists.txt  README.md  example.csv  exercise3.cpp  exercise3.hpp
exercise3/test/: test_parse_csv.cpp  test_quoted_split.cpp  test_split.cpp
